kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api-challange
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"80":{}}}'
    cloud.google.com/backend-config: '{"ports":{"80":"go-api-challange"}}'
spec:
  type: ClusterIP
  selector:
    app: go-api-challange
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
